@@ -1,0 +1,15 @@
+[Paths]
+
+; The full path to your base Civ 3 install, not Conquests. For example, on my system this would be "C:\GOG Games\Civilization III Complete". You can
+; leave this empty, in which case the editor will find your install automatically.
+civ_3_install_path = ""
+
+; The full path, including the file name, of your Civ 3's sound.dll. It is recommended to use the Conquests version but the vanilla one may work
+; too. You can leave this empty, in which case the editor will use Conquests\sound.dll on top of your Civ 3 install location.
+sound_dll_path = ""
+
+; The directory where the editor will store the temporary files needed to play previews. You can leave this empty, in which case the editor will use
+; a standard temp location provided by Windows. You can bring up that location in Windows Explorer by navigating to %TEMP%\AMBEditorTemp.
+; If you set this to a custom location, know that the editor will create folders named 1, 2, 3, etc. inside it as needed. Each time a preview is
+; played, it will attempt to delete those folders and their contents so they don't accumulate.
+temp_directory = ""
